  anything for 'funky' tags/revisions
- add psid to the patchset structure and pass through tree
  once just to assign the numbers.  this allows reporting
  psid when problems are found (above)
- more code restructuring - move stats to own module
- commenting cleanups
- include the very rudimentary merge_utils.sh functions
  I use to assist merging stuff

2.0b1
- major restructuring of source code.  single cvsps.c split into
  a few modules
- major rework of the data structures in order to support the most
  frequently requested, and most desired feature: -r.  cvsps
  can now associated symbolic tags with specific patchsets,
  branches are now associated with the patchset instead of 
  the individual revision.  you can view patchsets committed
  after a given symbolic tag, or between two tags.
- changed the handling of same author, same log message commits
  on different branches. this now creates multiple patchsets
- changed the handling of 'file xyz initially added on branch xyz'
  log messages, they now create hidden patchsets.
- these last two items have made the patchset numbering scheme
  incompatible with the old scheme.  patchsets are going
  to change numbers.

1.99.1 (not released)
- redid the data structures a bit to 'normalize' the references to 
  a file revision.  this allows the program to detect the case
  when a file is added on a branch, and generate the right output
  for 'cvsps -s' in this case (frequent bug report)
- added the '-l' option to restrict patchsets based on log descr
  content. (patch from Geoff Soutter).  added man page for it.
- added the --summary-first option suggested by Andi Kleen to
  have the PatchSet summary information for all patchsets at
  the head of the output, when multiple patchsets are given
  to the -s option.
- added the all: target to Makefile.  (patch from Ben Elliston)
- use a single centralized cvsps.cache file per root/repository
  this obviates the need to 'cvsps -u' in multiple checked out